--- a/my_app/src/component/header.css
+++ b/my_app/src/component/header.css
@@ -4,7 +4,7 @@
 #logo h1 span { color:#f8dbdb;}
 
 /* Header */
-#header { background:#fff; }
+#header { background:#a72020; }
 #header-inner { margin:0 auto; padding:0; width:970px;}
 
 /* Menu */
